# prompt-template

./: .gitignore  .pre-commit-config.yaml  README.md  poly.toml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
prompt_template/: prompt_template.py
prompt_template.egg-info/: PKG-INFO  SOURCES.txt
tests/: prompt_template_test.py
