[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-template"
version = "1.0.0"
description = "A simple but robust zero-dependency library for creating prompt templates"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "nhirschfed@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Development Status :: 4 - Beta",
  "Topic :: Utilities",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: General",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Typing :: Typed",
  "Operating System :: OS Independent",
]
keywords = [
  "template",
  "string-template",
  "prompt-engineering",
  "llm",
  "ai",
  "string-formatting",
  "text-processing",
  "zero-dependency",
]
dependencies = []

[project.urls]
homepage = "https://github.com/Goldziher/prompt-template"

[dependency-groups]
dev = [
  "covdefaults>=2.3.0",
  "faker>=33.3.1",
  "mypy>=1.14.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.1",
]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

format.docstring-code-line-length = 120
format.docstring-code-format = true
lint.select = ["ALL"]
lint.ignore = [
  "ANN401", # Dynamically typed ANY
  "COM812", # Conflicts with formatter
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D107",   # Missing docstring in __init__
  "D205",   # 1 blank line required between summary line and description
  "E501",   # Line too long, handled by ruff format
  "EM",     # Exception messages,
  "FBT",    # Anti-Boolean crusade
  "ISC001", # Conflicts with formatter
  "TRY",    # Try except block, rules are too strict
]
lint.per-file-ignores."tests/**/*.*" = [
  "ARG001",
  "D",
  "N815",
  "PT006",
  "PT007",
  "PT013",
  "RUF012",
  "S",
]

lint.isort.known-first-party = ["src", "tests"]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.13"

[tool.coverage.run]
omit = ["tests/*"]
plugins = ["covdefaults"]
source = ["src"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
fail_under = 100

[tool.mypy]
packages = ["src", "tests"]
python_version = "3.13"
implicit_reexport = false
show_error_codes = true
strict = true

[tool.setuptools.packages.find]
include = ["prompt_template"]

[tool.setuptools.package-data]
prompt_template = ["py.typed"]
