[build-system]
build-backend = "setuptools.build_meta"

requires = ["setuptools", "setuptools-scm"]

[project]
name = "prompt-template"
version = "1.2.0"
description = "A robust zero-dependency library for creating prompt templates"
readme = "README.md"
keywords = ["ai", "llm", "prompt-engineering", "prompt-template", "templating"]
license = { text = "MIT" }
authors = [{ name = "Na'aman Hirschfeld", email = "nhirschfed@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

urls.homepage = "https://github.com/Goldziher/prompt-template"

[dependency-groups]
dev = [
    "covdefaults>=2.3.0",
    "faker>=33.3.1",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
    "uv-bump",
]

[tool.setuptools.packages.find]
include = ["prompt_template"]

[tool.setuptools.package-data]
prompt_template = ["py.typed"]

[tool.uv.sources]
uv-bump = { git = "https://github.com/Goldziher/uv-bump" }

[tool.coverage.run]
omit = ["tests/*"]
plugins = ["covdefaults"]
source = ["src"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
fail_under = 100

[tool.mypy]
packages = ["src", "tests"]
python_version = "3.13"
implicit_reexport = false
show_error_codes = true
strict = true
